<resources>
    <string name="app_name">Parkfinder App</string>
    <string name="CreateAccount">Create an Account</string>

    <string name="Username">User Name</string>
    <string name="Password">Password</string>
    <string name="Button1">Create an Account</string>
    <string name="Button2">Create Account</string>
    <string name="Button3">Use my Location</string>
    <string name="Button4">Log In</string>
    <string name="Button5">Search</string>

    <string name="Search">Search a Location</string>

    <string name="Email">Email</string>
    <string name="Favorites">Favorites</string>

    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="or">Or</string>
    <string name="title_activity_maps">MapsActivity</string>


    <string name="maps_api_key">AIzaSyCjcrrs16eQfj1xCBV_tVkAecED6UaV1kM</string>
    <string name="option_get_place">Get Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string name="error">ERROR</string>
    <!-- Nav Menu -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="map">Map</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
</resources>