<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/CreateAccount"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextCreateAccountEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="151dp"
        android:layout_marginBottom="150dp"

        android:text="Email"


        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextCreateAccountPassword"
        app:layout_constraintStart_toStartOf="@+id/createAccountEditTextEmail"
        app:layout_constraintTop_toTopOf="@+id/createAccountTextView" />

    <EditText
        android:id="@+id/createAccountEditTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="49dp"
        android:background="#E3D7D7"
        android:hint="Enter your email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreateAccountEmail" />

    <EditText
        android:id="@+id/createAccountPW"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="49dp"
        android:background="#E3D7D7"
        android:hint="Enter your passwors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreateAccountPassword" />

    <TextView
        android:id="@+id/editTextCreateAccountPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textColor="#FFFFFF"

        android:textSize="15dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/createAccountPW"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/Button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountPW" />


</androidx.constraintlayout.widget.ConstraintLayout>